--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <div style="padding:16px;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial">
+      <div style="font-size:14px;opacity:.85">Starting PhotoWall...</div>
+      <div style="font-size:12px;opacity:.65;margin-top:8px">
+        If the window stays blank, check `logs/frontend.*.log`.
+      </div>
+    </div>
+  </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
