--- a/public/splash.html
+++ b/public/splash.html
@@ -17,7 +17,7 @@
             justify-content: center;
             background-color: #f5f5f4;
             /* Warm Gray Background */
-            font-family: "Noto Serif SC", serif;
+            font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
             overflow: hidden;
             border-radius: 12px;
             user-select: none;
@@ -87,14 +87,18 @@
             }
         }
     </style>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@500;700&display=swap" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0" />
 </head>
 
 <body>
     <div class="logo-container">
-        <span class="material-symbols-rounded" style="font-size: 48px; color: white;">photo_library</span>
+        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+            <path
+                d="M4 7.5A2.5 2.5 0 0 1 6.5 5h1.1a1 1 0 0 0 .8-.4l.7-.93A2 2 0 0 1 10.7 3h2.6a2 2 0 0 1 1.6.67l.7.93a1 1 0 0 0 .8.4h1.1A2.5 2.5 0 0 1 20 7.5v10A2.5 2.5 0 0 1 17.5 20h-11A2.5 2.5 0 0 1 4 17.5v-10Z"
+                fill="rgba(255,255,255,0.92)" />
+            <path
+                d="M12 10a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Z"
+                fill="rgba(99,102,241,0.95)" />
+        </svg>
     </div>
     <div class="app-title">PhotoWall</div>
     <div class="app-subtitle">Initializing Library...</div>
